Set codecov workflow to execute on push and pr

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,6 +1,12 @@
 name: Codecov Action
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull:
+    branches:
+      - main
 
 jobs:
   build:
