--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ iOSInjectionProject/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
+
+# MacOS
+.DS_Store
