Make iOS version 15.5

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -10,11 +10,11 @@ on:
 
 jobs:
   build:
-    runs-on: macOS-latest
+    runs-on: macOS-12
     steps:
       - name: Test
         uses: actions/checkout@v1
       - name: Build and Test
-        run:  xcodebuild test -project QuickCal.xcodeproj -scheme QuickCal -destination 'platform=iOS Simulator,name=iPhone 11,OS=15.2' -enableCodeCoverage YES build test
+        run:  xcodebuild test -project QuickCal.xcodeproj -scheme QuickCal -destination 'platform=iOS Simulator,name=iPhone 11,OS=15.5' -enableCodeCoverage YES build test
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1.2.1
