--- a/codecov.yml
+++ b/codecov.yml
@@ -2,7 +2,7 @@ coverage:
   status:
     project:
       default:
-        target: 95%
+        informational: true
     patch:
       default:
-        target: 100%
+        informational: true
