--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,4 +1,4 @@
-name: Codecov Action
+name: Codecov
 
 on:
   push:
@@ -9,10 +9,10 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: macOS-12
     steps:
-      - name: Test
+      - name: Checkout Codecov
         uses: actions/checkout@v1
       - name: Build and Test
         run:  xcodebuild test -project QuickCal.xcodeproj -scheme QuickCal -destination 'platform=iOS Simulator,name=iPhone 11,OS=15.5' -enableCodeCoverage YES build test
