--- a/codecov.yml
+++ b/codecov.yml
@@ -2,7 +2,7 @@ coverage:
   status:
     project:
       default:
-        informational: true
+        target: 95%
     patch:
       default:
-        informational: true
+        target: 100%
