Setup coredata with CalorieEntry

--- a/codecov.yml
+++ b/codecov.yml
@@ -8,3 +8,6 @@ coverage:
         target: 100%
 ignore:
     - "QuickCal/Previews"
+    - "QuickCal/Persistence.swift"
+    - "QuickCalTests"
+    - "QuickCalUITests"
