--- a/codecov.yml
+++ b/codecov.yml
@@ -2,9 +2,12 @@ coverage:
   status:
     project:
       default:
-        target: 95%
+        target: 80%
     patch:
       default:
-        target: 100%
+        target: 90%
 ignore:
     - "QuickCal/Previews"
+    - "QuickCal/Persistence.swift"
+    - "QuickCalTests"
+    - "QuickCalUITests"
